--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,28 +8,23 @@
 </head>  
 <body>
   <div id="main">
-      <div id="header-wrapper">
-        <div id="header" class="basic" >
-          <div class="site">
-              <a class="logo" href="/"><img src="logo_pages.png" alt="github pages" width="196" height="45"/></a>
-            <div class="topsearch">
-              <ul class="nav logged_out">
-                <li><a href="http://support.github.com/">Support</a></li>
-                <li><a href="http://github.com/">Back to GitHub</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div id="wrapper">
-        <div id="content" class="site">
-
-          {{ content }}
-
-        </div>
-      </div>
-
-      <div class="push"></div>
-    </div>
-  </body>
+    <div id="header-wrapper">
+      <div id="header" class="basic" >
+        <div class="site">
+          <a class="logo" href="/">Erik's code</a>
+          <div class="topsearch">
+            <ul class="nav logged_out">
+              <li><a href="http://github.com/">Back to Index</a></li>
+            </ul>
+          </div><!-- .topsearch -->
+        </div><!-- .site -->
+      </div><!-- #header -->
+    </div><!-- #header-wrapper -->
+    <div id="wrapper">
+      <div id="content" class="site">
+        {{ content }}
+      </div><!-- #content -->
+    </div><!-- #wrapper -->
+  </div><!-- #main -->
+</body>
 </html>
