added lots of posts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset=utf-8>
-<title>{{ page.title }}</title>
+<title>{{ page.title }} - Erik's Code</title>
 <link href="/css/common.css" media="screen" rel="stylesheet" type="text/css">
 <link href="/css/pygments.css" media="screen" rel="stylesheet" type="text/css">
 </head>  
@@ -11,10 +11,10 @@
     <div id="header-wrapper">
       <div id="header" class="basic" >
         <div class="site">
-          <a class="logo" href="/"><h1>Erik's code</h1></a>
+          <a class="logo" href="/"><h1>Erik's Code</h1></a>
           <div class="topsearch">
             <ul class="nav logged_out">
-              <li><a href="/">Back to Index</a></li>
+              <li><a href="/about.html">About Erik</a></li>
             </ul>
           </div><!-- .topsearch -->
         </div><!-- .site -->
