--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset=utf-8>
 <title>{{ page.title }} - Erik's Code</title>
+{% if page.keywords %}<meta name=keywords content="{{ page.keywords }}">{% endif %}
 <link href="/css/common.css" media="screen" rel="stylesheet" type="text/css">
 <link href="/css/pygments.css" media="screen" rel="stylesheet" type="text/css">
 </head>  
