Updated favicon post, added node try/catch post
- added RSS icon/link

--- a/css/common.css
+++ b/css/common.css
@@ -153,6 +153,11 @@ a img {
 }
 
 
+#posts_rss a {
+float: right;
+}
+
+
 /*------------------------------------------------------------------------------
     Content
 ------------------------------------------------------------------------------*/
