--- a/css/common.css
+++ b/css/common.css
@@ -244,6 +244,15 @@ p code {
   color: #868686;
 }
 
+#disqus_thread {
+  margin-top: 1em;
+  border: 1px solid #cacaca;
+  padding: 10px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+}
+
 
 /*------------------------------------------------------------------------------
      Pre/Code Styles
