--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,22 @@
 <html lang="en">
 <head>
 <meta charset=utf-8>
+
+{% if page.url == '/index.html' %}
+  <script>function utmx_section(){}function utmx(){}(function(){var
+  k='75416290-0',d=document,l=d.location,c=d.cookie;
+  if(l.search.indexOf('utm_expid='+k)>0)return;
+  function f(n){if(c){var i=c.indexOf(n+'=');if(i>-1){var j=c.
+  indexOf(';',i);return escape(c.substring(i+n.length+1,j<0?c.
+  length:j))}}}var x=f('__utmx'),xx=f('__utmxx'),h=l.hash;d.write(
+  '<sc'+'ript src="'+'http'+(l.protocol=='https:'?'s://ssl':
+  '://www')+'.google-analytics.com/ga_exp.js?'+'utmxkey='+k+
+  '&utmx='+(x?x:'')+'&utmxx='+(xx?xx:'')+'&utmxtime='+new Date().
+  valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
+  '" type="text/javascript" charset="utf-8"><\/sc'+'ript>')})();
+  </script><script>utmx('url','A/B');</script>
+{% endif %}
+
 <title>{{ page.title }} - Erik's Code</title>
 {% if page.keywords %}<meta name=keywords content="{{ page.keywords }}">{% endif %}
 <link href="/css/common.css" media="screen" rel="stylesheet" type="text/css">
@@ -29,5 +45,14 @@
       </div><!-- #content -->
     </div><!-- #wrapper -->
   </div><!-- #main -->
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-7915266-3', 'dubbelboer.com');
+    ga('send', 'pageview');
+  </script>
 </body>
 </html>
