--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,9 +2,10 @@
 layout: default
 ---
 
-<h1>{{ page.title }}</h1>
+<h2>{{ page.title }}</h2>
 
-<em>{{ page.date | date_to_string }}</em>
+<em>Date: {{ page.date | date_to_string }}</em><br>
+<em>Author: Erik Dubbelboer</em>
 
 {{ content }}
 
