Added author meta

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,10 @@
 {% endif %}
 
 <title>{{ page.title }} - Erik's Code</title>
-{% if page.keywords %}<meta name=keywords content="{{ page.keywords }}">{% endif %}
+{% if page.keywords %}
+<meta name=keywords content="{{ page.keywords }}">
+<link rel="author" href="https://plus.google.com/112629878803154668236" />
+{% endif %}
 <link href="/css/common.css" media="screen" rel="stylesheet" type="text/css">
 <link href="/css/pygments.css" media="screen" rel="stylesheet" type="text/css">
 </head>  
