Changed google plus link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 <title>{{ page.title }} - Erik's Code</title>
 {% if page.keywords %}
 <meta name=keywords content="{{ page.keywords }}">
-<link rel="author" href="https://plus.google.com/112629878803154668236" />
+<link rel="author" href="https://plus.google.com/+ErikDubbelboer" />
 {% endif %}
 {% if page.description %}
 <meta name=description content="{{ page.description }}">
