--- a/css/common.css
+++ b/css/common.css
@@ -421,3 +421,16 @@ float: left;
 width: 5em;
 }
 
+
+/*------------------------------------------------------------------------------
+    Table
+------------------------------------------------------------------------------*/
+
+table {
+border-collapse: collapse;
+}
+
+th, td {
+border: 1px solid #000;
+padding: 0.2em 0.6em;
+}
